--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,24 +6,28 @@
 
     <application
         android:allowBackup="true"
+        android:hardwareAccelerated="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Testpdate">
+        android:theme="@style/AppTheme.NoActionBar">
         <activity
-            android:name=".Page2_SelectRoom"
+            android:name=".Page4_Sort"
             android:exported="true" />
         <activity
-            android:name=".Page3_GameUi"
+            android:name=".Lobby"
+            android:exported="true" />
+        <activity
+            android:name=".Page2_SelectRoom"
             android:exported="true" />
         <activity
             android:name=".Page2_CreatRoom"
             android:exported="true" />
         <activity
-            android:name=".ui.login.LoginActivity"
-            android:exported="true"
-            android:label="@string/title_activity_login" />
+            android:name=".Page3_GameUi"
+            android:exported="true" />
         <!--
         activity
             android:name=".Page1_Login"
@@ -32,6 +36,10 @@
          activity
             android:name=".RecyyclerOnClick"
             android:exported="true" /
+
+            <activity
+            android:name=".Page3_GameUi"
+            android:exported="true" />
         -->
         <activity
             android:name=".Page1_Login"
