--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,6 @@
 
     <application
         android:allowBackup="true"
-
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:hardwareAccelerated="false"
@@ -16,18 +15,23 @@
         android:theme="@style/AppTheme.NoActionBar">
         <activity
             android:name=".Page4_Sort"
+            android:screenOrientation="landscape"
             android:exported="true" />
         <activity
             android:name=".Lobby"
+            android:screenOrientation="landscape"
             android:exported="true" />
         <activity
             android:name=".Page2_SelectRoom"
+            android:screenOrientation="landscape"
             android:exported="true" />
         <activity
             android:name=".Page2_CreatRoom"
+            android:screenOrientation="landscape"
             android:exported="true" />
         <activity
             android:name=".Page3_GameUi"
+            android:screenOrientation="landscape"
             android:exported="true" />
         <!--
         activity
@@ -44,10 +48,10 @@
         -->
         <activity
             android:name=".Page1_Login"
+            android:screenOrientation="landscape"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
